feat(metrics): Integrate Micrometer for HTTP metrics and backend KPIs
- Implemented Micrometer metrics in HttpRequestMetricsRegistry for tracking request duration, count, errors, and response payload size.
- Enhanced SuperAdminService to record metrics for family-related operations.
- Updated WebSocketNotificationService to include metrics for notifications sent to families and admins.
- Added tests for HTTP metrics to ensure proper recording and retrieval of metrics.
- Updated documentation to reflect the transition to Micrometer-based metrics and the removal of ad-hoc registries.